force-app/main/default/objects/Portfolio_Contract__c/Portfolio_Contract__c.object-meta.xml
<CustomObject>
    <label>Portfolio Contract</label>
    <nameField>
        <displayFormat>PC-{00000000}</displayFormat>
        <label>Portfolio Contract Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Portfolio Contracts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>