force-app/main/default/objects/Portfolio_Contract__c/fields/billingAddressLine1__c.field-meta.xml
<CustomField>
    <fullName>billingAddressLine1__c</fullName>
    <label>billingAddressLine1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>