force-app/main/default/objects/Portfolio_Contract__c/fields/billingAddressLine2__c.field-meta.xml
<CustomField>
    <fullName>billingAddressLine2__c</fullName>
    <label>billingAddressLine2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>