force-app/main/default/objects/Portfolio_Contract__c/fields/billingCity__c.field-meta.xml
<CustomField>
    <fullName>billingCity__c</fullName>
    <label>billingCity</label>
    <length>100</length>
    <type>Text</type>
</CustomField>