force-app/main/default/objects/Portfolio_Contract__c/fields/billingState__c.field-meta.xml
<CustomField>
    <fullName>billingState__c</fullName>
    <label>billingState</label>
    <length>100</length>
    <type>Text</type>
</CustomField>