force-app/main/default/objects/Portfolio_Contract__c/fields/billingZipCode__c.field-meta.xml
<CustomField>
    <fullName>billingZipCode__c</fullName>
    <label>billingZipCode</label>
    <length>100</length>
    <type>Text</type>
</CustomField>