force-app/main/default/objects/Portfolio_Contract__c/fields/businessSegment__c.field-meta.xml
<CustomField>
    <fullName>businessSegment__c</fullName>
    <label>businessSegment</label>
    <length>100</length>
    <type>Text</type>
</CustomField>