force-app/main/default/objects/Portfolio_Contract__c/fields/contractAverageDaysToPay__c.field-meta.xml
<CustomField>
    <fullName>contractAverageDaysToPay__c</fullName>
    <label>contractAverageDaysToPay</label>
    <length>100</length>
    <type>Text</type>
</CustomField>