force-app/main/default/objects/Portfolio_Contract__c/fields/contractExpireDate__c.field-meta.xml
<CustomField>
    <fullName>contractExpireDate__c</fullName>
    <label>contractExpireDate</label>
    <length>100</length>
    <type>Text</type>
</CustomField>