force-app/main/default/objects/Portfolio_Contract__c/fields/contractNumber__c.field-meta.xml
<CustomField>
    <fullName>contractNumber__c</fullName>
    <label>contractNumber</label>
    <length>100</length>
    <type>Text</type>
</CustomField>