force-app/main/default/objects/Portfolio_Contract__c/fields/contractOriginalCost__c.field-meta.xml
<CustomField>
    <fullName>contractOriginalCost__c</fullName>
    <label>contractOriginalCost</label>
    <length>100</length>
    <type>Text</type>
</CustomField>