force-app/main/default/objects/Portfolio_Contract__c/fields/contractPayment__c.field-meta.xml
<CustomField>
    <fullName>contractPayment__c</fullName>
    <label>contractPayment</label>
    <length>100</length>
    <type>Text</type>
</CustomField>