force-app/main/default/objects/Portfolio_Contract__c/fields/contractPeriodicity__c.field-meta.xml
<CustomField>
    <fullName>contractPeriodicity__c</fullName>
    <label>contractPeriodicity</label>
    <length>100</length>
    <type>Text</type>
</CustomField>