force-app/main/default/objects/Portfolio_Contract__c/fields/contractProgramId__c.field-meta.xml
<CustomField>
    <fullName>contractProgramId__c</fullName>
    <label>contractProgramId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>