force-app/main/default/objects/Portfolio_Contract__c/fields/contractProgramName__c.field-meta.xml
<CustomField>
    <fullName>contractProgramName__c</fullName>
    <label>contractProgramName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>