force-app/main/default/objects/Portfolio_Contract__c/fields/contractPurchaseOption__c.field-meta.xml
<CustomField>
    <fullName>contractPurchaseOption__c</fullName>
    <label>contractPurchaseOption</label>
    <length>100</length>
    <type>Text</type>
</CustomField>