force-app/main/default/objects/Portfolio_Contract__c/fields/contractSigner__c.field-meta.xml
<CustomField>
    <fullName>contractSigner__c</fullName>
    <label>contractSigner</label>
    <length>100</length>
    <type>Text</type>
</CustomField>