force-app/main/default/objects/Portfolio_Contract__c/fields/contractSignerTitle__c.field-meta.xml
<CustomField>
    <fullName>contractSignerTitle__c</fullName>
    <label>contractSignerTitle</label>
    <length>100</length>
    <type>Text</type>
</CustomField>