force-app/main/default/objects/Portfolio_Contract__c/fields/contractStartDate__c.field-meta.xml
<CustomField>
    <fullName>contractStartDate__c</fullName>
    <label>contractStartDate</label>
    <length>100</length>
    <type>Text</type>
</CustomField>