force-app/main/default/objects/Portfolio_Contract__c/fields/contractTerm__c.field-meta.xml
<CustomField>
    <fullName>contractTerm__c</fullName>
    <label>contractTerm</label>
    <length>100</length>
    <type>Text</type>
</CustomField>