force-app/main/default/objects/Portfolio_Contract__c/fields/contractType__c.field-meta.xml
<CustomField>
    <fullName>contractType__c</fullName>
    <label>contractType</label>
    <length>100</length>
    <type>Text</type>
</CustomField>