force-app/main/default/objects/Portfolio_Contract__c/fields/customerAddressLine1__c.field-meta.xml
<CustomField>
    <fullName>customerAddressLine1__c</fullName>
    <label>customerAddressLine1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>