force-app/main/default/objects/Portfolio_Contract__c/fields/customerAddressline2__c.field-meta.xml
<CustomField>
    <fullName>customerAddressline2__c</fullName>
    <label>customerAddressline2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>