force-app/main/default/objects/Portfolio_Contract__c/fields/customerCity__c.field-meta.xml
<CustomField>
    <fullName>customerCity__c</fullName>
    <label>customerCity</label>
    <length>100</length>
    <type>Text</type>
</CustomField>