force-app/main/default/objects/Portfolio_Contract__c/fields/customerName__c.field-meta.xml
<CustomField>
    <fullName>customerName__c</fullName>
    <label>customerName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>