force-app/main/default/objects/Portfolio_Contract__c/fields/customerNumber__c.field-meta.xml
<CustomField>
    <fullName>customerNumber__c</fullName>
    <label>customerNumber</label>
    <length>100</length>
    <type>Text</type>
</CustomField>