force-app/main/default/objects/Portfolio_Contract__c/fields/customerState__c.field-meta.xml
<CustomField>
    <fullName>customerState__c</fullName>
    <label>customerState</label>
    <length>100</length>
    <type>Text</type>
</CustomField>