force-app/main/default/objects/Portfolio_Contract__c/fields/customerZipCode__c.field-meta.xml
<CustomField>
    <fullName>customerZipCode__c</fullName>
    <label>customerZipCode</label>
    <length>100</length>
    <type>Text</type>
</CustomField>