force-app/main/default/objects/Portfolio_Contract__c/fields/lastPaymentReceivedDate__c.field-meta.xml
<CustomField>
    <fullName>lastPaymentReceivedDate__c</fullName>
    <label>lastPaymentReceivedDate</label>
    <length>100</length>
    <type>Text</type>
</CustomField>