force-app/main/default/objects/Portfolio_Contract__c/fields/leaseSignerTitle__c.field-meta.xml
<CustomField>
    <fullName>leaseSignerTitle__c</fullName>
    <label>leaseSignerTitle</label>
    <length>100</length>
    <type>Text</type>
</CustomField>