force-app/main/default/objects/Portfolio_Contract__c/fields/nbrOfAssets__c.field-meta.xml
<CustomField>
    <fullName>nbrOfAssets__c</fullName>
    <label>nbrOfAssets</label>
    <summaryForeignKey>Portfolio_Equipment__c.Portfolio_Contract__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>