force-app/main/default/objects/Portfolio_Contract__c/fields/numberOfRemainingPayments__c.field-meta.xml
<CustomField>
    <fullName>numberOfRemainingPayments__c</fullName>
    <label>numberOfRemainingPayments</label>
    <length>100</length>
    <type>Text</type>
</CustomField>