force-app/main/default/objects/Portfolio_Contract__c/fields/subBusinessSegment__c.field-meta.xml
<CustomField>
    <fullName>subBusinessSegment__c</fullName>
    <label>subBusinessSegment</label>
    <length>100</length>
    <type>Text</type>
</CustomField>