force-app/main/default/objects/Portfolio_Contract__c/fields/vendorAddressLine1__c.field-meta.xml
<CustomField>
    <fullName>vendorAddressLine1__c</fullName>
    <label>vendorAddressLine1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>