force-app/main/default/objects/Portfolio_Contract__c/fields/vendorAddressLine2__c.field-meta.xml
<CustomField>
    <fullName>vendorAddressLine2__c</fullName>
    <label>vendorAddressLine2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>