force-app/main/default/objects/Portfolio_Contract__c/fields/vendorCity__c.field-meta.xml
<CustomField>
    <fullName>vendorCity__c</fullName>
    <label>vendorCity</label>
    <length>100</length>
    <type>Text</type>
</CustomField>