force-app/main/default/objects/Portfolio_Contract__c/fields/vendorName__c.field-meta.xml
<CustomField>
    <fullName>vendorName__c</fullName>
    <label>vendorName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>