force-app/main/default/objects/Portfolio_Contract__c/fields/vendorNumber1__c.field-meta.xml
<CustomField>
    <fullName>vendorNumber1__c</fullName>
    <label>vendorNumber1</label>
    <length>200</length>
    <type>Text</type>
</CustomField>