force-app/main/default/objects/Portfolio_Contract__c/fields/vendorNumber2__c.field-meta.xml
<CustomField>
    <fullName>vendorNumber2__c</fullName>
    <label>vendorNumber2</label>
    <length>200</length>
    <type>Text</type>
</CustomField>