force-app/main/default/objects/Portfolio_Contract__c/fields/vendorNumber3__c.field-meta.xml
<CustomField>
    <fullName>vendorNumber3__c</fullName>
    <label>vendorNumber3</label>
    <length>200</length>
    <type>Text</type>
</CustomField>