force-app/main/default/objects/Portfolio_Contract__c/fields/vendorSiteCode__c.field-meta.xml
<CustomField>
    <fullName>vendorSiteCode__c</fullName>
    <label>vendorSiteCode</label>
    <length>100</length>
    <type>Text</type>
</CustomField>