force-app/main/default/objects/Portfolio_Contract__c/fields/vendorState__c.field-meta.xml
<CustomField>
    <fullName>vendorState__c</fullName>
    <label>vendorState</label>
    <length>100</length>
    <type>Text</type>
</CustomField>