force-app/main/default/objects/Portfolio_Contract__c/fields/vendorZipCode__c.field-meta.xml
<CustomField>
    <fullName>vendorZipCode__c</fullName>
    <label>vendorZipCode</label>
    <length>100</length>
    <type>Text</type>
</CustomField>