force-app/main/default/objects/Portfolio_Contract__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>contractNumber__c</columns>
    <columns>contractTerm__c</columns>
    <columns>customerAddressLine1__c</columns>
    <columns>customerCity__c</columns>
    <columns>customerNumber__c</columns>
    <columns>contractOriginalCost__c</columns>
    <columns>nbrOfAssets__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>